* added new components :   - RangeSlider (slider representing a range).   - SequencePreviewPanel (sequence preview).   - ColormapIcon (icon representing a colormap). * added PluginPackaged interface. * added HandledException class (permit to avoid report dialog for handled exception). * improved RangeComponent (can now display inner RangeSlider component). * improved colormap model loading GUI. * improved SimpleITK integration. * improved native libraries loading. * preliminary headless support. * fixed some minors bugs.